--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,9 @@
+auxiliary.org-netbeans-modules-javascript-nodejs.run_2e_enabled=false
+browser.run=true
 file.reference.KaindorfFAQ_Frontend-public_html=public_html
 file.reference.KaindorfFAQ_Frontend-test=test
 files.encoding=UTF-8
 site.root.folder=${file.reference.KaindorfFAQ_Frontend-public_html}
+start.file=vueExample.html
 test.folder=${file.reference.KaindorfFAQ_Frontend-test}
+web.context.root=/KaindorfFAQ_Frontend
